@@ -7,7 +7,6 @@
 
 defined('_JEXEC') or die;
 
-jimport('joomla.application.component.controller');
 jimport('joomla.application.component.helper');
 
 /**
@@ -16,7 +15,7 @@ jimport('joomla.application.component.helper');
  * @package		Joomla.Installation
  * @since		1.6
  */
-class JInstallationController extends JController
+class JInstallationController extends JControllerLegacy
 {
 	/**
 	 * Method to display a view.
