@@ -1,0 +1,23 @@
+<?php
+/**
+ * @package     Joomla.Libraries
+ * @subpackage  Controller
+ *
+ * @copyright   Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE
+ */
+
+defined('JPATH_PLATFORM') or die;
+
+jimport('joomla.application.component.controller');
+
+/**
+ * Alias to JController for forward compatability.
+ *
+ * @package     Joomla.Libraries
+ * @subpackage  Controller
+ * @since       2.5.5
+ */
+class JControllerLegacy extends JController
+{
+}
