@@ -1,0 +1,23 @@
+<?php
+/**
+ * @package     Joomla.Libraries
+ * @subpackage  Model
+ *
+ * @copyright   Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE
+ */
+
+defined('JPATH_PLATFORM') or die;
+
+jimport('joomla.application.component.model');
+
+/**
+ * Alias to JModel for forward compatability.
+ *
+ * @package     Joomla.Libraries
+ * @subpackage  Model
+ * @since       2.5.5
+ */
+class JModelLegacy extends JModel
+{
+}
