@@ -8,17 +8,18 @@
 
 // no direct access
 defined('_JEXEC') or die;
+$item_heading = $params->get('item_heading', 'h4');
 ?>
 <?php if ($params->get('item_title')) : ?>
 
-	<<?php echo $params->get('item_heading'); ?> class="newsflash-title<?php echo $params->get('moduleclass_sfx'); ?>">
+	<<?php echo $item_heading; ?> class="newsflash-title<?php echo $params->get('moduleclass_sfx'); ?>">
 	<?php if ($params->get('link_titles') && $item->link != '') : ?>
 		<a href="<?php echo $item->link;?>">
 			<?php echo $item->title;?></a>
 	<?php else : ?>
 		<?php echo $item->title; ?>
 	<?php endif; ?>
-	</<?php echo $params->get('item_heading'); ?>>
+	</<?php echo $item_heading; ?>>
 
 <?php endif; ?>
 
